updates and now for summer

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -164,7 +164,7 @@ tags:
 - name: journal
   emoj: "🖋"
   titl: "Journal App"
-  tit2: "How and why I've been journaling daily since 2016 in a digital way using Siri Shortcuts (previously Workflows) and some additional apps. There are countless benefits to daily journaling - it clears your thoughts, gives you perspective and helps you find focus. In these posts I share my journey as I'm fine-tunning my journaling app based on Apple's Siri Shortcuts. [Get latest Journal Shortcut](/journal20/)!"
+  tit2: "I've been journaling daily since 2016 in a digital way using Siri Shortcuts (previously Workflows). There are countless benefits to daily journaling - it clears your thoughts, gives you perspective and helps you find focus. In these posts I share my journey as I'm fine-tunning my journaling app based on Apple's Siri Shortcuts. [Start journaling](/journal-basic/) or try [journaling and daily planning](/journal20/)."
 - name: life
   emoj: "😎"
   titl: "Life"
