Blue site avatar

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Michael.team
 description: "Hello, I am Michael Sliwinski, founder of Nozbe - a to-do app that helps small teams do great things. I write about team productivity, modern work from home #NoOffice and #iPadOnly. I believe that work is not a place you go to, it's a thing you do."
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://michael.team/icon.dark.png
+avatar: https://michael.team/icon.blue.png
 
 #
 # Flags below are optional
