--- a/_data/main.yml
+++ b/_data/main.yml
@@ -182,7 +182,7 @@ tags:
 - name: news
   emoj: "💌"
   titl: "Newsletter"
-  tit2: "**Subscribe to my Newsletter!** Actually, there are two newsletters now: **[LinkedIn Newsletter (weekly)](https://www.linkedin.com/newsletters/no-office-by-michael-sliwinski-6996403283875540992/)** where I share one of the best posts [from this blog](/archive) every week as an inspiration and/or also subscribe to my [**Newsletter on Substack (1-2 monthly)**](https://nooffice.substack.com) where I share my recent writing in a nutshell, an actionable productivity tip and more! Below you'll find the latest issues of the latter newsletter. See you on the other side!"
+  tit2: "**Subscribe to my Newsletter!** Actually, there are two newsletters now: **[LinkedIn Newsletter (weekly)](https://michael.gratis/inn){:target='_blank'}** where I share one of the best posts [from this blog](/archive) every week as an inspiration and/or also subscribe to my [**Newsletter on Substack (1-2 monthly)**](https://michael.gratis/n){:target='_blank'} where I share my recent writing in a nutshell, an actionable productivity tip and more! Below you'll find the latest issues of the latter newsletter. See you on the other side!"
 - name: nooffice
   emoj: "🏝"
   titl: "NoOffice"
