--- a/_data/main.yml
+++ b/_data/main.yml
@@ -167,6 +167,10 @@ tags:
   emoj: "🖋"
   titl: "Journal App"
   tit2: "I've been journaling daily since 2016 in a digital way using Siri Shortcuts (previously Workflows). There are countless benefits to daily journaling - it clears your thoughts, gives you perspective and helps you find focus. In these posts I share my journey as I'm fine-tunning my journaling app based on Apple's Siri Shortcuts. [Start journaling](/journal-basic/) or try [journaling and planning](/journal22/)."
+- name: lego
+  emoj: "🤖"
+  titl: "Lego"
+  tit2: "Why as an adult, LEGO blocks are impotrant to me and keep helping me unleash my creativity. Also which LEGO sets I'm getting myself for Christmas every year."
 - name: life
   emoj: "😎"
   titl: "Life"
