newsletter on 2022 and mastodon link support

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -34,6 +34,7 @@ source_pl: Zobacz źródło na GitHub
 source_es: Ver fuente en GitHub
 
 linked: "💬 Comment on LinkedIn"
+mastodon: "🐘 Discuss with me on Mastodon"
 
 read: "Read more"
 read_pl: "Czytaj dalej"
