--- a/_data/main.yml
+++ b/_data/main.yml
@@ -49,9 +49,13 @@ ad: "notrue" #"true" so it displays, everything else to not show it, like "false
 ad_link: "https://nozbe.com/promo/?c=michaelteam"
 ad_text: "BLACK FRIDAY: 💯 MORE of NOZBE! BUY 3️⃣ GET 6️⃣ MONTHS!"
 
-descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [teams](/vlog/). I [write essays](/archive/), [books](/books/), work on [projects](/projects) and I [podcast](/noofficefm/) for you using [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/) as I [believe](/contact) that *work is not a place you go to, it's a thing you do.*"
-descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://michael.gratis/nozbe_pl){:target='_blank'} - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum/) piszę o [produktywności](/pl/imagazine/). [Wierzę](/pl/kontakt/), że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
-descr_es: "Hola, soy Michael Sliwinski, fundador de [Nozbe](https://michael.gratis/nozbe_es){:target='_blank'} - gestor de tareas para modernos equipos. [Escribo](/es/todo/) sobre [productividad](/es/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
+ad_post: "Hi, I'm Michael Sliwinski, the host of this site. Are you a fellow **small business owner**? Make sure to give [Nozbe](/nozbe/) a try - my app will help you and your team get your professional and private life organized in a simple way. **It's FREE and you'll get a bonus of $15 for Premium version by signing up below:**"
+ad_post_es: "Hi, I'm Michael Sliwinski, the host of this site. Are you a fellow **small business owner**? Make sure to give [Nozbe](/nozbe/) a try - my app will help you and your team get your professional and private life organized in a simple way. **It's FREE and you'll get a bonus of $15 for Premium version by signing up below:**" #translate to Spanish
+ad_post_pl: "Nazywam się Michał Śliwiński i witam Cię na mojej stronie. Czy też jesteś **przedsiębiorcą**? Jeśli tak, to wypróbuj [Nozbe](https://michael.gratis/nozbe_pl) - moja aplikacja pomoże Tobie i Twojemu zespołowi ogarnąć wszystkie sprawy firmowe i prywatne w prosty sposób. **Nozbe jest DARMOWE i dodatkowo dostaniesz 60 PLN na wersję Premium, jeśli zapiszesz się z banera poniżej:**"
+
+descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [business owners](/business/) and their [teams](/vlog/). I [write essays](/archive/), [books](/books/), work on [projects](/projects) and I [podcast](/noofficefm/) for you using [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/) as I [believe](/contact) that *work is not a place you go to, it's a thing you do.*"
+descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://michael.gratis/nozbe_pl){:target='_blank'} - aplikacji do zadań dla nowoczesnych przedsiębiorców i ich zespołów. [Po polsku](/pl/archiwum/) piszę o [produktywności](/pl/imagazine/). [Wierzę](/pl/kontakt/), że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
+descr_es: "Hola, soy Michael Sliwinski, fundador de [Nozbe](https://michael.gratis/nozbe_es){:target='_blank'} - gestor de tareas para modernos emprendedores y sus equipos. [Escribo](/es/todo/) sobre [productividad](/es/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
 searchbox: "search..."
 searchbox_no: "Nothing found!"
@@ -140,7 +144,7 @@ tags:
 - name: business
   emoj: "💼"
   titl: "Business"
-  tit2: "Capitalism, online business, startups, money and my struggles as an Internet entrepreneur. No, I don't really own a briefcase."
+  tit2: "I run a [productivity](/productivity/) [app](/nozbe/) for small business owners like me. Here I share my thoughts on capitalism, running an online business, building startups, managing money and my struggles as an Internet entrepreneur. No, I don't really own a briefcase."
 - name: computers
   emoj: "💻"
   titl: "Computers"
