Thread support for the blog

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -37,6 +37,7 @@ linked: "💬 Comment on LinkedIn"
 linked_pl: "💬 Skomentuj na LinkedIn"
 mastodon: "🐘 Discuss on Mastodon"
 mastodon_pl: "🐘 Podyskutujmy na Mastodonie"
+thread: "🧵 Thread"
 
 read: "Read more"
 read_pl: "Czytaj dalej"
