PL thread support

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -38,6 +38,7 @@ linked_pl: "💬 Skomentuj na LinkedIn"
 mastodon: "🐘 Discuss on Mastodon"
 mastodon_pl: "🐘 Podyskutujmy na Mastodonie"
 thread: "🧵 Thread"
+thread_pl: "🧵 Wątek"
 
 read: "Read more"
 read_pl: "Czytaj dalej"
