--- a/_data/main.yml
+++ b/_data/main.yml
@@ -49,9 +49,9 @@ twitter: "MSliwinski"
 url_podcast: "https://thepodcast.fm/"
 url_podcast_name: "ThePodcast.fm"
 
-ad: "notrue" #"true" so it displays, everything else to not show it, like "false" or "notrue"
+ad: "true" #"true" so it displays, everything else to not show it, like "false" or "notrue"
 ad_link: "https://nozbe.com/promo/?c=michaelteam"
-ad_text: "Introducing Nozbe Business w/MULTIPLE workspaces + get 2 extra months!"
+ad_text: "BLACK FRIDAY 🖤 at Nozbe - 50% OFF - buy 3️⃣ months and get 3️⃣ months 🆓"
 
 ad_post: "Hi, I'm Michael Sliwinski, the host of this site. Are you a fellow **small business owner**? Make sure to give [Nozbe](/nozbe/) a try - my app will help you and your team get your professional and private life organized in a simple way. **It's FREE and you'll get a bonus of $15 for Premium version by signing up below:**"
 ad_post_es: "Hi, I'm Michael Sliwinski, the host of this site. Are you a fellow **small business owner**? Make sure to give [Nozbe](/nozbe/) a try - my app will help you and your team get your professional and private life organized in a simple way. **It's FREE and you'll get a bonus of $15 for Premium version by signing up below:**" #translate to Spanish
