--- a/_data/main.yml
+++ b/_data/main.yml
@@ -59,7 +59,7 @@ ad_post_pl: "Nazywam się Michał Śliwiński i witam Cię na mojej stronie. Cz
 
 ad_n: "is for [Nozbe](/gratis?to=na)"
 ad_n_pl: "to jest [Nozbe](/gratis?to=na_pl)"
-ad_n_es: "significa [Nozbe](/gratis?to=na_es)"
+ad_n_es: "es [Nozbe](/gratis?to=na_es)"
 
 ad_slogan: "Nozbe - the way for smart business owners to get their personal and business life organized in a simple way."
 ad_slogan_pl: "Nozbe - sposób dla smart przedsiębiorców do ogarnięcia swoich spraw prywatnych i firmowych w prosty sposób."
