--- a/_data/main.yml
+++ b/_data/main.yml
@@ -69,13 +69,13 @@ descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/no
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://michael.gratis/nozbe_pl){:target='_blank'} - aplikacji do zadań dla nowoczesnych przedsiębiorców i ich zespołów. [Po polsku](/pl/archiwum/) piszę o [produktywności](/pl/imagazine/). [Wierzę](/pl/kontakt/), że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
 descr_es: "Hola, soy Michael Sliwinski, fundador de [Nozbe](https://michael.gratis/nozbe_es){:target='_blank'} - gestor de tareas para modernos emprendedores y sus equipos. [Escribo](/es/todo/) sobre [productividad](/es/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
-searchbox: "search..."
+searchbox: "search…"
 searchbox_no: "Nothing found!"
 
-searchbox_pl: "szukaj..."
+searchbox_pl: "szukaj…"
 searchbox_pl_no: "Nic nie znaleziono!"
 
-searchbox_es: "buscar..."
+searchbox_es: "buscar…"
 searchbox_es_no: "¡No has encontrado nada!"
 
 
@@ -244,7 +244,7 @@ tags:
 - name: podcast
   emoj: "🎧"
   titl: "ThePodcast.fm"
-  tit2: "The Podcast was a conversation between [me](/about) and Radek ([@radexp](https://twitter.com/radexp), [radex.io](https://radex.io/)), Nozbe's VP of Engineering, that we've been having for 4 years (2016-2020) about [productivity, business, books, and whatever else comes to mind](/podcast-toc)... **[Subscribe and check archives](https://podcasts.apple.com/podcast/the-podcast/id1012329770)**"
+  tit2: "The Podcast was a conversation between [me](/about) and Radek ([@radexp](https://twitter.com/radexp), [radex.io](https://radex.io/)), Nozbe's ex-VP of Engineering, that we've been having for 4 years (2016-2020) about [productivity, business, books, and whatever else comes to mind](/podcast-toc)… **[Subscribe and check archives](https://podcasts.apple.com/podcast/the-podcast/id1012329770)**"
 - name: show
   emoj: "📽"
   titl: "Productive! Show"
@@ -257,11 +257,15 @@ tags:
   emoj: "🔗"
   titl: "Shortcuts"
   tit2: |
-    I love automating stuff on my [iPad](/ipadonly) thanks to the built-in Shortcuts app (previously: Workflow). Here's the list of my most used Shortcuts:
-    * [Journal](/journal)
-    * [Gratitude](/gratitude)
-    * [YouTube Watcher](/yt)
-    * [Dice](/dice)
+    I love automating stuff on my [iPad](/ipadonly) thanks to the built-in Shortcuts app (previously: Workflow). Here's the list of my best Shortcuts:
+    * ✍️ [Journal](/journal)
+    * 🙏 [Gratitude](/gratitude)
+    * 📺 [YouTube Watcher](/yt)
+    * 🎲 [Dice](/dice)
+    * 🚀 [Action button](/action)
+    * ✅ [Add Task to Nozbe](/nozbe-add)
+    * ⌚️ [WatchNote](/watchnote) or [SMSnote](/smsnote)
+    Choose one or read below for details:
 - name: sports
   emoj: "🎾"
   titl: "Sports"
@@ -295,7 +299,7 @@ tags_pl:
 - name: gosc
   emoj: "🤩"
   titl: "Gościnnie"
-  tit2: "Miejsca gdzie występowałem gościnnie: prasa, wywiady, podcasty, konferencje..."
+  tit2: "Miejsca gdzie występowałem gościnnie: prasa, wywiady, podcasty, konferencje…"
 - name: imagazine
   emoj: "👨🏼‍💻"
   titl: "iMagazine"
