--- a/_data/main.yml
+++ b/_data/main.yml
@@ -262,10 +262,9 @@ tags:
     * 🙏 [Gratitude](/gratitude)
     * 📺 [YouTube Watcher](/yt)
     * 🎲 [Dice](/dice)
-    * 🚀 [Action button](/action)
+    * 📲 [Action button](/action)
     * ✅ [Add Task to Nozbe](/nozbe-add)
     * ⌚️ [WatchNote](/watchnote) or [SMSnote](/smsnote)
-    Choose one or read below for details:
 - name: sports
   emoj: "🎾"
   titl: "Sports"
