--- a/_data/main.yml
+++ b/_data/main.yml
@@ -216,7 +216,7 @@ tags:
 - name: news
   emoj: "💌"
   titl: "Newsletter"
-  tit2: "**Subscribe to my Newsletter!** Actually, there are two newsletters now: **[LinkedIn Newsletter (weekly)](https://michael.gratis/inn){:target='_blank'}** where I share one of the best posts [from this blog](/archive) every week as an inspiration and/or also subscribe to my [**Newsletter on Substack (1-2 monthly)**](https://michael.gratis/n){:target='_blank'} where I share my recent writing in a nutshell, an actionable productivity tip and more! Below you'll find the latest issues of the latter newsletter. See you on the other side!"
+  tit2: "**Subscribe to my Newsletter (1-2 times per month)!** You can either subscribe to my **[LinkedIn Newsletter](https://michael.gratis/inn){:target='_blank'}** if you want to [connect with me on LinkedIn](https://michael.gratis/in) or if you prefer email: [**Newsletter on Substack**](https://michael.gratis/n){:target='_blank'}. I share my recent best writing in a nutshell, an actionable productivity tip and more! Below you'll find the latest issues. See you on the other side!"
 - name: nooffice
   emoj: "🏝"
   titl: "NoOffice"
