--- a/_data/main.yml
+++ b/_data/main.yml
@@ -312,6 +312,10 @@ tags_pl:
   emoj: "👨🏼‍💻"
   titl: "iMagazine"
   tit2: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl){:target='_blank'} od początku powstawania tego magazynu"
+- name: nadgryzieni
+  emoj: "🍎"
+  titl: "Nadgryzieni"
+  tit2: "Oprócz felietonów do [iMagazine](/pl/imagazine), często pojawiam się gościnnie w podkaście *Nadgryzieni* u Wojtka i Tomka. Ostatnio nagrałem z nimi sporo odcinków, także w wersji video, więc zapraszam!"
 - name: niemabiura
   emoj: "🎙"
   titl: "Nie Ma Biura"
