--- a/_data/main.yml
+++ b/_data/main.yml
@@ -271,7 +271,7 @@ tags:
     * 📺 [YouTube Watcher](/yt)
     * 🎲 [Dice](/dice)
     * 📲 [Action button](/action)
-    * ✅ [Add Task to Nozbe](/nozbe-add)
+    * ✅ [Add Task to Nozbe](/newtodo)
     * ⌚️ [WatchNotes](/watchnotes) or ([WatchNote](/watchnote) or [SMSnote](/smsnote))
     * 📋 [Clipboard Manager](/clipboard)
 - name: sports
