nagryzieni stare odcinki

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -315,7 +315,7 @@ tags_pl:
 - name: nadgryzieni
   emoj: "🍎"
   titl: "Nadgryzieni"
-  tit2: "Oprócz felietonów do [iMagazine](/pl/imagazine), często pojawiam się gościnnie w podkaście *Nadgryzieni* u Wojtka i Tomka. Ostatnio nagrałem z nimi sporo odcinków, także w wersji video, więc zapraszam!"
+  tit2: "Oprócz felietonów do [iMagazine](/pl/imagazine), zostałem też gościnnym współprowadzącym w podkaście *Nadgryzieni* u Wojtka i Tomka. Ostatnio nagrałem z nimi sporo odcinków, także w wersji video, więc zapraszam!"
 - name: niemabiura
   emoj: "🎙"
   titl: "Nie Ma Biura"
