--- a/_data/main.yml
+++ b/_data/main.yml
@@ -196,7 +196,7 @@ tags:
 - name: journal
   emoj: "🖋"
   titl: "Journal App"
-  tit2: "I've been journaling daily since 2016 in a digital way using Siri Shortcuts (previously Workflows). There are countless benefits to daily journaling - it clears your thoughts, gives you perspective and helps you find focus. In these posts I share my journey as I'm fine-tunning my journaling app based on Apple's Siri Shortcuts. [Start journaling](/journal-basic/) or try [journaling and planning](/journal22/)."
+  tit2: "I've been journaling daily since 2016 in a digital way using Siri Shortcuts (previously Workflows). There are countless benefits to daily journaling - it clears your thoughts, gives you perspective and helps you find focus. In these posts I share my journey as I'm fine-tunning my journaling app based on Apple's Siri Shortcuts. [Start journaling today with the latest Journal 4](/journal4/)."
 - name: lego
   emoj: "🤖"
   titl: "Lego"
