monday, nadgryzieni, fixes

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -316,7 +316,7 @@ tags_pl:
 - name: nadgryzieni
   emoj: "🍎"
   titl: "Nadgryzieni"
-  tit2: "Oprócz felietonów do [iMagazine](/pl/imagazine), zostałem też gościnnym współprowadzącym w podkaście *Nadgryzieni* u Wojtka i Tomka. Ostatnio nagrałem z nimi sporo odcinków, także w wersji video, więc zapraszam!"
+  tit2: "Oprócz felietonów do [iMagazine](/pl/imagazine), od roku 2024 zostałem regularnym gościnnym współprowadzącym w podkaście [*Nadgryzieni*](https://retrorocketnetwork.pl/category/nadgryzieni/){:target='_blank'} u Wojtka i Tomka. Polecam szczególnie odcinki specjalne o naszych ulubionych [filmach](/pl/nadgryzieni-560/), [serialach](/pl/nadgryzieni-561/) oraz [wywiad ze mną odnośnie założenia Nozbe](/pl/nadgryzieni-559/). Wszystkie odcinki zarówno w wersji audio jak i video. Nagrywamy live w **[piątki](/pl/friday) o godzinie 9 rano**."
 - name: niemabiura
   emoj: "🎙"
   titl: "Nie Ma Biura"
