--- a/_data/main.yml
+++ b/_data/main.yml
@@ -312,7 +312,7 @@ tags_pl:
 - name: imagazine
   emoj: "👨🏼‍💻"
   titl: "iMagazine"
-  tit2: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl){:target='_blank'} od początku powstawania tego magazynu"
+  tit2: "Felietony jakie piszę do [iMagazine](https://imagazine.pl/author/nozbe/){:target='_blank'} od początku powstawania tego magazynu"
 - name: nadgryzieni
   emoj: "🍎"
   titl: "Nadgryzieni"
